# fastapi-db-config

./: .env.dev  .gitignore  README.md  pyproject.toml  ruff.toml
app/: main.py  models.py  routes.py  schemas.py  services.py
app/alembic/: env.py
app/alembic/versions/: 2025-03-28_create_item_table.py
app/core/: config.py  db.py  deps.py
