[project]
name = "1-db-connection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi[all]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
